--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "1.0.0",
   "main": "./src/electron.js",
   "scripts": {
+    "ts": "tsc -p ./src/tssrc",
+    "ts:w": "tsc -p ./src/tssrc -w",
     "build": "rollup -c",
     "dev": "rollup -c -w",
     "start": "sirv public",
     "electron": "npm run build && npm run pure-electron",
-    "electron:dev": "npm run dev && npm run pure-electron",
+    "electron:dev": "concurrently \"npm run ts:w\" \"npm run dev\" \"npm run pure-electron\"",
     "pure-electron": "electron ."
   },
   "engines": {
@@ -16,6 +18,7 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^11.0.0",
     "@rollup/plugin-node-resolve": "^6.0.0",
+    "concurrently": "^5.0.2",
     "electron": "^7.1.9",
     "electron-prebuilt-win": "^3.1.3",
     "rollup": "^1.20.0",
@@ -24,7 +27,8 @@
     "rollup-plugin-terser": "^5.1.2",
     "run-s": "0.0.0",
     "sirv-cli": "^0.4.5",
-    "svelte": "^3.0.0"
+    "svelte": "^3.0.0",
+    "typescript": "^3.7.5"
   },
   "dependencies": {
     "chokidar": "^3.3.1"
