--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "main": "./src/electron.js",
   "scripts": {
-    "ts": "tsc -p ./src/tssrc",
-    "ts:w": "tsc -p ./src/tssrc -w",
+    "ts:clear": "rimraf ./src/tslib",
+    "ts": "npm run ts:clear && tsc -p ./src/tssrc",
+    "ts:w": "npm run ts:clear && tsc -p ./src/tssrc -w",
     "build": "rollup -c",
     "dev": "rollup -c -w",
     "start": "sirv public",
@@ -16,11 +17,13 @@
     "node": ">= 8"
   },
   "devDependencies": {
+    "@pyoner/svelte-types": "^3.4.4-2",
     "@rollup/plugin-commonjs": "^11.0.0",
     "@rollup/plugin-node-resolve": "^6.0.0",
     "concurrently": "^5.0.2",
     "electron": "^7.1.9",
     "electron-prebuilt-win": "^3.1.3",
+    "rimraf": "^3.0.0",
     "rollup": "^1.20.0",
     "rollup-plugin-livereload": "^1.0.0",
     "rollup-plugin-svelte": "^5.0.3",
