--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "rimraf": "^3.0.0",
     "rollup": "^1.20.0",
     "rollup-plugin-livereload": "^1.0.0",
+    "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-svelte": "^5.0.3",
     "rollup-plugin-terser": "^5.1.2",
     "sirv-cli": "^0.4.5",
@@ -36,6 +37,6 @@
   "dependencies": {
     "chokidar": "^3.3.1",
     "electron-window-state": "^5.0.3",
-    "keymirror": "^0.1.1"
+    "redux": "^4.0.5"
   }
 }
