--- a/package.json
+++ b/package.json
@@ -5,13 +5,12 @@
   "scripts": {
     "ts:clear": "rimraf ./src/tslib",
     "ts": "npm run ts:clear && tsc -p ./src/tssrc",
-    "ts:w": "npm run ts:clear && tsc -p ./src/tssrc -w",
-    "build": "rollup -c",
-    "dev": "rollup -c -w",
+    "build": "webpack",
     "start": "sirv public",
     "electron": "npm run build && npm run pure-electron",
-    "electron:dev": "npm run ts && concurrently \"npm run ts:w\" \"npm run dev\" \"npm run pure-electron\"",
+    "electron:dev": "concurrently \"webpack --watch\" \"npm run dev\" \"npm run pure-electron\"",
     "pure-electron": "electron ."
+
   },
   "engines": {
     "node": ">= 8"
@@ -22,8 +21,11 @@
     "@types/keymirror": "^0.1.1",
     "@types/node": "^12.12.21",
     "concurrently": "^5.0.2",
+    "cross-env": "^6.0.3",
+    "css-loader": "^3.4.2",
     "electron": "^7.1.9",
     "electron-prebuilt-win": "^3.1.3",
+    "mini-css-extract-plugin": "^0.9.0",
     "rimraf": "^3.0.0",
     "rollup": "^1.20.0",
     "rollup-plugin-livereload": "^1.0.0",
@@ -31,8 +33,14 @@
     "rollup-plugin-svelte": "^5.0.3",
     "rollup-plugin-terser": "^5.1.2",
     "sirv-cli": "^0.4.5",
+    "style-loader": "^1.1.3",
     "svelte": "^3.0.0",
-    "typescript": "^3.7.5"
+    "svelte-loader": "^2.13.6",
+    "ts-loader": "^6.2.1",
+    "typescript": "^3.7.5",
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.10.1"
   },
   "dependencies": {
     "chokidar": "^3.3.1",
