--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "scripts": {
     "ts:clear": "rimraf ./src/tslib",
     "ts": "npm run ts:clear && tsc -p ./src/tssrc",
+    "ts:w": "npm run ts:clear && tsc -p ./src/tssrc -w",
     "build": "webpack",
     "start": "sirv public",
     "electron": "npm run build && npm run pure-electron",
-    "electron:dev": "concurrently \"webpack --watch\" \"npm run dev\" \"npm run pure-electron\"",
+    "electron:dev": "npm run ts && concurrently \"npm run ts:w\" \"webpack --watch\" \"npm run pure-electron\"",
     "pure-electron": "electron ."
-
   },
   "engines": {
     "node": ">= 8"
@@ -27,11 +27,6 @@
     "electron-prebuilt-win": "^3.1.3",
     "mini-css-extract-plugin": "^0.9.0",
     "rimraf": "^3.0.0",
-    "rollup": "^1.20.0",
-    "rollup-plugin-livereload": "^1.0.0",
-    "rollup-plugin-node-builtins": "^2.1.2",
-    "rollup-plugin-svelte": "^5.0.3",
-    "rollup-plugin-terser": "^5.1.2",
     "sirv-cli": "^0.4.5",
     "style-loader": "^1.1.3",
     "svelte": "^3.0.0",
@@ -45,6 +40,7 @@
   "dependencies": {
     "chokidar": "^3.3.1",
     "electron-window-state": "^5.0.3",
+    "node": "^13.6.0",
     "redux": "^4.0.5"
   }
 }
