--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "ts": "npm run ts:clear && tsc -p ./src/tssrc",
     "ts:w": "tsc -p ./src/tssrc -w",
     "build": "webpack",
-    "start": "sirv public",
+    "start": "electron ./dist/main.bundle.js",
+    "dev": "rimraf dist && cross-env NODE_ENV=development webpack --watch --progress --colors",
+    "prod": "rimraf dist && cross-env NODE_ENV=production webpack --progress --colors",
     "electron": "npm run build && npm run pure-electron",
     "electron:dev": "npm run ts && concurrently \"npm run ts:w\" \"webpack --watch\" \"npm run pure-electron\"",
     "pure-electron": "electron ."
@@ -21,10 +23,13 @@
     "@types/keymirror": "^0.1.1",
     "@types/node": "^12.12.21",
     "concurrently": "^5.0.2",
+    "copy-pkg-json-webpack-plugin": "0.0.38",
     "cross-env": "^6.0.3",
     "css-loader": "^3.4.2",
     "electron": "^7.1.9",
     "electron-prebuilt-win": "^3.1.3",
+    "html-webpack-plugin": "^3.2.0",
+    "lodash": "^4.17.15",
     "mini-css-extract-plugin": "^0.9.0",
     "rimraf": "^3.0.0",
     "sirv-cli": "^0.4.5",
