--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
   "name": "svelte-app",
   "version": "1.0.0",
-  "main": "./src/electron.js",
+  "main": "./dist/main.bundle.js",
   "scripts": {
     "ts:clear": "rimraf ./src/tslib",
     "ts": "npm run ts:clear && tsc -p ./src/tssrc",
     "ts:w": "tsc -p ./src/tssrc -w",
+    "build:dev": "rimraf dist && cross-env NODE_ENV=development webpack --progress --colors",
+    "build:watch": "cross-env NODE_ENV=development webpack --watch --progress --colors",
     "build": "webpack",
     "start": "electron ./dist/main.bundle.js",
     "dev": "rimraf dist && cross-env NODE_ENV=development webpack --watch --progress --colors",
     "prod": "rimraf dist && cross-env NODE_ENV=production webpack --progress --colors",
     "electron": "npm run build && npm run pure-electron",
-    "electron:dev": "npm run ts && concurrently \"npm run ts:w\" \"webpack --watch\" \"npm run pure-electron\"",
+    "electron:dev": "npm run build:dev && concurrently \"npm run build:watch\" \"npm run pure-electron\"",
     "pure-electron": "electron ."
   },
   "engines": {
