--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "css-loader": "^3.4.2",
     "electron": "^7.1.9",
     "electron-prebuilt-win": "^3.1.3",
+    "file-loader": "^5.0.2",
     "html-webpack-plugin": "^3.2.0",
     "lodash": "^4.17.15",
     "mini-css-extract-plugin": "^0.9.0",
